Actually fix vertical alignment of headers

--- a/resources/www-root/foos.css
+++ b/resources/www-root/foos.css
@@ -19,8 +19,7 @@ h1 {
    text-align: center;
    margin-top: 0;
    font-weight: normal;
-   height: 10%;
-   padding: 25px 0 10px 0;
+   padding: 20px 0;
 }
 
 div#players {
